[gd_scene load_steps=3 format=2]

[ext_resource path="res://Creatures/Creature/Creature.gd" type="Script" id=1]
[ext_resource path="res://Creatures/Creature/HitBox.gd" type="Script" id=2]

[node name="Creature" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="SelectBox" type="Area2D" parent="."]
position = Vector2( 0, 2 )

[node name="SelectBoxShape" type="CollisionShape2D" parent="SelectBox"]
position = Vector2( 0, -2 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]

[node name="AttackCooldownTimer" type="Timer" parent="HitBox"]

[node name="HurtBox" type="Area2D" parent="."]

[node name="HurtBoxShape" type="CollisionShape2D" parent="HurtBox"]

[node name="Stats" type="Node2D" parent="."]

[node name="UpdatePathToEnemyTimer" type="Timer" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_HitBox_area_entered"]
[connection signal="area_exited" from="HitBox" to="HitBox" method="_on_HitBox_area_exited"]
